fixed speaker cards on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -392,7 +392,8 @@ ul > li > a {
 	padding: 3% 2%;
 	margin-bottom: 1%;
 	background-color: #EDE6DD;
-
+	width: calc(50% - 3%);
+	display: inline-block;
 	-webkit-transition: background-color 400ms linear;
 	-moz-transition: background-color 400ms linear;
 	-o-transition: background-color 400ms linear;
